Resharding uses of bumpCollectionVersionAndChangeMetadataInTxn are not idempotent

XMLWordPrintableJSON

    • Fully Compatible
    • v5.2, v5.0
    • Sharding 2022-01-10, Sharding 2022-01-24, Sharding 2022-02-07, Sharding 2022-05-02
    • 36
    • 4
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This is because the usages was assuming that if an error occurred while running the function, it will be aborted so retrying can start with a clean slate. However, there is an edge case when commit was successful but the wait for write concern was interrupted. This can cause the function to assert even after successfully committing the changes.

            Assignee:
            Brett Nawrocki
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: