 SERVER-61444 Resharding coordinator state transactions now use w:1

Prior to updating its own in-memory state, the resharding coordinator
 first runs a transaction to persist that state. There is an edge case
 where that transaction (if run with >w:1) will commit successfully, but
 become interrupted while waiting for replication. If that happens, the
 coordinator will have completed the transaction's work, but fail to
 update its own in-memory state, and therefore will redo that work when
 it retries after handling the exception. Instead of running with the
 default of w:majority, the transactions for these state transitions
 have therefore been changed to use w:1 in order to avoid the
 interruption edge case. An explicit wait for majority is added after
 the transactions in cases where it must be majority committed before
 proceeding.